--- a/contact.html
+++ b/contact.html
@@ -83,21 +83,21 @@
 
     <div class="contact-item">
       <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email" />
-      <a href="mailto:developer@email.com">syahrulfarih28@gmail.com</a>
+      <a href="mailto:syahrulfarih28@email.com">syahrulfarih28@gmail.com</a>
     </div>
 
     <div class="contact-item">
       <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" />
-      <a href="https://wa.me/6281234567890" target="_blank">+62 85727565089</a>
+      <a href="https://wa.me/6285727565089" target="_blank">+62 85727565089</a>
     </div>
 
     <div class="contact-item">
       <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram" />
-      <a href="https://t.me/username" target="_blank">@Farihaja01</a>
+      <a href="https://t.me/Farihaja01" target="_blank">@Farihaja01</a>
     </div>
 
     <div class="back-button">
-      <a href="index.html">← Kembali ke Dasbor</a>
+      <a href="index.html">← Kembali ke Dasboard</a>
     </div>
   </div>
 </body>
