--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
 
     <div class="contact-item">
       <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email" />
-      <a href="mailto:syahrulfarih28@email.com">syahrulfarih28@gmail.com</a>
+      <a href="mailto:syahrulfarih28@gmail.com">syahrulfarih28@gmail.com</a>
     </div>
 
     <div class="contact-item">
