--- a/buat_data.html
+++ b/buat_data.html
@@ -104,7 +104,7 @@
       newVariableGroup.innerHTML = `
         <label for="variableName${variableCount}">Nama Variabel:</label>
         <input type="text" id="variableName${variableCount}" name="variableName[]" required>
-        <label for="variableType${variableCount}">Tipe Variabel:</label>
+        <label for="variableType${variableCount}">Type:</label>
         <select id="variableType${variableCount}" name="variableType[]" required>
           <option value="text">Teks</option>
           <option value="number">Angka</option>
