--- a/index.html
+++ b/index.html
@@ -48,19 +48,18 @@
     }
 
     .container {
-      padding: 40px 20px;
+      padding: 60px 20px;
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
+      flex-direction: column;
+      align-items: center;
     }
 
     .card {
       background-color: white;
       border-radius: 12px;
       box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
-      width: 300px;
-      padding: 25px;
+      width: 320px;
+      padding: 30px;
       text-align: center;
       transition: transform 0.2s ease;
     }
@@ -70,7 +69,7 @@
     }
 
     .card img {
-      width: 60px;
+      width: 70px;
       margin-bottom: 15px;
     }
 
@@ -80,14 +79,14 @@
     }
 
     .card p {
-      font-size: 14px;
+      font-size: 15px;
       color: #555;
     }
 
     .card a {
       display: inline-block;
       margin-top: 15px;
-      padding: 10px 15px;
+      padding: 10px 20px;
       background-color: #00796b;
       color: white;
       text-decoration: none;
@@ -150,52 +149,38 @@
 
   <div class="hero">
     <h1>Selamat Datang di Aplikasi Form to Excel</h1>
-    <p>Kelola data, lihat riwayat, dan hubungi developer dengan mudah dari satu tempat.</p>
+    <p>Masukkan dan kelola data Anda dengan mudah, cepat, dan efisien.</p>
   </div>
 
   <div class="container">
     <div class="card">
       <img src="https://cdn-icons-png.flaticon.com/512/1828/1828911.png" alt="Form">
-      <h3>Form Input</h3>
-      <p>Masukkan data baru ke sistem melalui form dinamis dan fleksibel.</p>
+      <h3>Form Input Data</h3>
+      <p>Gunakan form dinamis untuk menginput data ke dalam sistem dengan fleksibilitas tinggi.</p>
       <a href="buat_data.html" id="bukaFormBtn">Buka Form</a>
-    </div>
-
-    <div class="card">
-      <img src="https://cdn-icons-png.flaticon.com/512/2921/2921222.png" alt="Riwayat">
-      <h3>Riwayat Data</h3>
-      <p>Cek semua data yang tersimpan, riwayat data pengguna yang pernah singgah disini.</p>
-      <a href="riwayat.html">Lihat Riwayat</a>
-    </div>
-
-    <div class="card">
-      <img src="https://cdn-icons-png.flaticon.com/512/561/561127.png" alt="Kontak">
-      <h3>Hubungi Developer</h3>
-      <p>Punya pertanyaan, masukan, atau ingin kolaborasi? Kami siap membantu.</p>
-      <a href="contact.html">Hubungi Kami</a>
     </div>
   </div>
 
   <div class="stats">
-    <h2>Statistik Aplikasi</h2>
+    <h2>Aktivitas Pengguna</h2>
     <div class="stats-grid">
       <div class="stat-item">
         <h3 id="formCounter">0+</h3>
         <p>Form Dibuka</p>
       </div>
       <div class="stat-item">
-        <h3>3</h3>
-        <p>Fitur Utama</p>
+        <h3>1</h3>
+        <p>Fitur Aktif</p>
       </div>
       <div class="stat-item">
         <h3>99.9%</h3>
-        <p>Reliabilitas</p>
+        <p>Stabilitas Sistem</p>
       </div>
     </div>
   </div>
 
   <div class="footer">
-    &copy; 2025 Dibuat dengan ❤️ oleh Developer Hebat - Aplikasi FE(Form to Excel)
+    &copy; 2025 Dibuat dengan ❤️ oleh Developer Hebat - Aplikasi FE (Form to Excel)
   </div>
 
   <script>
