--- a/for_dat.html
+++ b/for_dat.html
@@ -167,7 +167,7 @@
 
       <div class="button-group">
         <button id="backToDashboard">Kembali ke Dasbor</button>
-        <button id="downloadExcel">Download Excel</button>
+        <button id="downloadExcel">Ekspor CSV</button>
       </div>
     </div>
   </div>
@@ -333,3 +333,4 @@
   </script>
 </body>
 </html>
+
